--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cross-env": "^7.0.3",
     "express-http-context": "^1.2.4",
     "jsqr": "^1.3.1",
+    "markdown-it": "^12.0.4",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "qr-scanner": "^1.2.0",
