--- a/.drone.yml
+++ b/.drone.yml
@@ -25,6 +25,8 @@ steps:
   pull: true
   secrets:
     - ssh_key
+    - user
+    - host_address
   when:
     event:
       - push
@@ -33,8 +35,10 @@ steps:
       - drone-test
     status: success
   settings:
-    host: 10.0.0.58
-    username: root
+    host:
+      from_secret: host_address
+    username:
+      from_secret: user
     key:
       from_secret: ssh_key
     command_timeout: 600s
