--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,8 @@ steps:
   commands:
     - node -v
     - yarn --version
-- name: backend_build
+
+- name: frontend_build
   image: node:14
   commands:
     - node -v
